# myDesk

./: .gitignore  CMakeLists.txt  README.md  dev.ps1
src/apps/capture_demo/: CMakeLists.txt  main.cpp
src/apps/codec_demo/: CMakeLists.txt  main.cpp
src/apps/gui_viewer/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  remote_session.cpp  remote_session.h  video_widget.cpp  video_widget.h
src/apps/host/: CMakeLists.txt  main.cpp
src/apps/mydesk/: CMakeLists.txt  account_manager.cpp  account_manager.h  device_id_gen.cpp  device_id_gen.h  device_list_manager.cpp  device_list_manager.h  file_transfer_widget.cpp  file_transfer_widget.h  frameless_window.cpp  frameless_window.h  headless_service.cpp  headless_service.h  host_service.cpp  host_service.h  log_panel.cpp  log_panel.h  login_dialog.cpp  login_dialog.h  main.cpp  mydesk_window.cpp  mydesk_window.h  viewer_session.cpp  viewer_session.h  viewer_widget.cpp  viewer_widget.h  web_server.cpp  web_server.h
src/apps/rtc_demo/: CMakeLists.txt  main.cpp
src/apps/signal_server/: CMakeLists.txt  main.cpp
src/apps/viewer/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/audio/: audio_manager.cpp  audio_manager.h
src/core/capture/: capture_mac.h  capture_mac.mm  capture_win.cpp  capture_win.h  capture_x11.cpp  capture_x11.h  screen_capture.cpp  screen_capture.h  screen_recorder.cpp  screen_recorder.h
src/core/codec/: h264_decoder.cpp  h264_decoder.h  h264_encoder.cpp  h264_encoder.h
src/core/common/: frame.h
src/core/file_transfer/: file_transfer.cpp  file_transfer.h
src/core/input/: input_event.cpp  input_event.h  input_inject_mac.h  input_inject_mac.mm  input_inject_win.cpp  input_inject_win.h  input_inject_x11.cpp  input_inject_x11.h  input_injector.cpp  input_injector.h
src/core/net/: channel.h  message.cpp  message.h  tcp_socket.cpp  tcp_socket.h
src/core/p2p/: rtc_transport.cpp  rtc_transport.h
src/core/signal/: signal_client.cpp  signal_client.h
